@@ -14,7 +14,7 @@ libRivetProjections_la_SOURCES = \
   FoxWolframMoments.cc \
   FParameter.cc \
   HadronicFinalState.cc \
-  NonHadronicFinalState.cc \
+  HeavyHadrons.cc \
   Hemispheres.cc \
   IdentifiedFinalState.cc \
   InitialQuarks.cc \
@@ -27,6 +27,7 @@ libRivetProjections_la_SOURCES = \
   MissingMomentum.cc \
   Multiplicity.cc \
   NeutralFinalState.cc \
+  NonHadronicFinalState.cc \
   ParisiTensor.cc \
   PrimaryHadrons.cc \
   Sphericity.cc \
